# liteide

./: .gitignore
liteidex/src/api/: CMakeLists.txt  api.sln
liteidex/src/api/docbrowserapi/: CMakeLists.txt  docbrowserapi.vcxproj  docbrowserapi.vcxproj.filters
liteidex/src/api/golangastapi/: CMakeLists.txt  golangastapi.vcxproj  golangastapi.vcxproj.filters
liteidex/src/api/golangdocapi/: CMakeLists.txt  golangdocapi.vcxproj  golangdocapi.vcxproj.filters
liteidex/src/api/liteapi/: CMakeLists.txt  liteapi.h  liteapi.vcxproj  liteapi.vcxproj.filters
liteidex/src/api/litebuildapi/: CMakeLists.txt  litebuildapi.vcxproj  litebuildapi.vcxproj.filters
liteidex/src/api/litedebugapi/: CMakeLists.txt  litedebugapi.vcxproj  litedebugapi.vcxproj.filters
liteidex/src/api/liteeditorapi/: CMakeLists.txt  liteeditorapi.vcxproj  liteeditorapi.vcxproj.filters
liteidex/src/api/liteenvapi/: CMakeLists.txt  liteenvapi.vcxproj  liteenvapi.vcxproj.filters
liteidex/src/api/litefindapi/: CMakeLists.txt  litefindapi.vcxproj  litefindapi.vcxproj.filters
liteidex/src/api/litettyapi/: CMakeLists.txt  litettyapi.vcxproj  litettyapi.vcxproj.filters
liteidex/src/api/quickopenapi/: CMakeLists.txt  quickopenapi.vcxproj  quickopenapi.vcxproj.filters
liteidex/src/api/terminalapi/: CMakeLists.txt  terminalapi.vcxproj  terminalapi.vcxproj.filters
liteidex/src/liteapp/: CMakeLists.txt  filemanager.cpp  liteapp.cpp  liteapp.vcxproj  liteapp.vcxproj.filters  sidewindowstyle.cpp
liteidex/src/liteide/: CMakeLists.txt  liteide.vcxproj  liteide.vcxproj.filters
liteidex/src/plugins/: CMakeLists.txt  plugins.sln
liteidex/src/plugins/bookmarks/: CMakeLists.txt  bookmarkmanager.cpp  bookmarkmanager.h  bookmarkmodel.cpp  bookmarks.vcxproj  bookmarks.vcxproj.filters
liteidex/src/plugins/dlvdebugger/: CMakeLists.txt  dlvdebugger.cpp  dlvdebugger.vcxproj  dlvdebugger.vcxproj.filters
liteidex/src/plugins/fakevimedit/: CMakeLists.txt  fakevimedit.vcxproj  fakevimedit.vcxproj.filters
liteidex/src/plugins/filebrowser/: CMakeLists.txt  filebrowser.cpp  filebrowser.h  filebrowser.vcxproj  filebrowser.vcxproj.filters
liteidex/src/plugins/gdbdebugger/: CMakeLists.txt
liteidex/src/plugins/golangast/: CMakeLists.txt  astwidget.cpp  golangast.vcxproj  golangast.vcxproj.filters
liteidex/src/plugins/golangcode/: CMakeLists.txt  golangcode.cpp  golangcode.vcxproj  golangcode.vcxproj.filters
liteidex/src/plugins/golangdoc/: CMakeLists.txt  findapiwidget.cpp  finddocwidget.cpp  golangdoc.vcxproj  golangdoc.vcxproj.filters
liteidex/src/plugins/golangedit/: CMakeLists.txt  golangedit.vcxproj  golangedit.vcxproj.filters
liteidex/src/plugins/golangfmt/: CMakeLists.txt  golangfmt.vcxproj  golangfmt.vcxproj.filters
liteidex/src/plugins/golanglint/: CMakeLists.gen.txt
liteidex/src/plugins/golangpackage/: CMakeLists.txt  golangpackage.vcxproj  golangpackage.vcxproj.filters  packagebrowser.cpp  packageproject.cpp
liteidex/src/plugins/golangplay/: CMakeLists.txt  golangplay.vcxproj  golangplay.vcxproj.filters
liteidex/src/plugins/golangpresent/: CMakeLists.txt  golangpresent.vcxproj  golangpresent.vcxproj.filters
liteidex/src/plugins/golangtool/: CMakeLists.txt
liteidex/src/plugins/imageeditor/: CMakeLists.txt  imageeditor.cpp  imageeditor.vcxproj  imageeditor.vcxproj.filters
liteidex/src/plugins/jsonedit/: CMakeLists.txt  jsonedit.vcxproj  jsonedit.vcxproj.filters
liteidex/src/plugins/litebuild/: CMakeLists.txt  litebuild.cpp  litebuild.vcxproj  litebuild.vcxproj.filters  litebuildplugin.cpp
liteidex/src/plugins/litedebug/: CMakeLists.txt  debugwidget.cpp  litedebug.cpp  litedebug.vcxproj  litedebug.vcxproj.filters
liteidex/src/plugins/liteeditor/: CMakeLists.txt  faketooltip.cpp  liteeditor.vcxproj  liteeditor.vcxproj.filters  liteeditormark.cpp  liteeditorwidgetbase.cpp
liteidex/src/plugins/liteenv/: CMakeLists.txt  envmanager.cpp  liteenv.vcxproj  liteenv.vcxproj.filters
liteidex/src/plugins/litefind/: CMakeLists.txt  litefind.vcxproj  litefind.vcxproj.filters
liteidex/src/plugins/liteshell/: CMakeLists.txt
liteidex/src/plugins/litetty/: CMakeLists.txt  litetty.vcxproj  litetty.vcxproj.filters
liteidex/src/plugins/makefileproject/: CMakeLists.txt
liteidex/src/plugins/markdown/: CMakeLists.txt  htmlpreview.cpp  markdown.vcxproj  markdown.vcxproj.filters
liteidex/src/plugins/profileproject/: CMakeLists.txt
liteidex/src/plugins/qsqleditor/: CMakeLists.txt
liteidex/src/plugins/quickopen/: CMakeLists.txt  quickopen.vcxproj  quickopen.vcxproj.filters  quickopenfiles.cpp  quickopenwidget.cpp
liteidex/src/plugins/rustedit/: CMakeLists.txt  rustedit.vcxproj  rustedit.vcxproj.filters
liteidex/src/plugins/syntaxeditor/: CMakeLists.txt
liteidex/src/plugins/terminal/: CMakeLists.txt  terminal.cpp  terminal.vcxproj  terminal.vcxproj.filters
liteidex/src/plugins/webkithtmlwidget/: CMakeLists.txt
liteidex/src/plugins/welcome/: CMakeLists.txt  welcome.vcxproj  welcome.vcxproj.filters  welcomebrowser.cpp
liteidex/src/utils/: CMakeLists.txt  utils.sln
liteidex/src/utils/colorstyle/: CMakeLists.txt  colorstyle.cpp  colorstyle.vcxproj  colorstyle.vcxproj.filters
liteidex/src/utils/dlvclient/: CMakeLists.txt  dlvclient.h  dlvclient.vcxproj  dlvclient.vcxproj.filters
liteidex/src/utils/documentbrowser/: CMakeLists.txt  documentbrowser.cpp  documentbrowser.vcxproj  documentbrowser.vcxproj.filters
liteidex/src/utils/editorutil/: CMakeLists.txt  editorutil.cpp  editorutil.vcxproj  editorutil.vcxproj.filters
liteidex/src/utils/extension/: CMakeLists.txt  extension.vcxproj  extension.vcxproj.filters
liteidex/src/utils/filesystem/: CMakeLists.txt  filesystem.vcxproj  filesystem.vcxproj.filters  filesystemwidget.cpp
liteidex/src/utils/fileutil/: CMakeLists.txt  fileutil.cpp  fileutil.vcxproj  fileutil.vcxproj.filters
liteidex/src/utils/folderview/: CMakeLists.txt  dirsortfilterproxymodel.cpp  filesystemmodelex.cpp  folderview.vcxproj  folderview.vcxproj.filters  multifoldermodel.cpp  multiindexmodel.cpp
liteidex/src/utils/golangapi/: CMakeLists.txt  golangapi.cpp  (+3 more)
(+182 files in other folders)
