cmake_minimum_required(VERSION 3.16)
project(plugins VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Set up AUTOMOC and some sensible defaults for runtime execution
# When using Qt 6.3, you can replace the code block below with
# qt_standard_project_setup()
set(CMAKE_AUTOMOC ON)
include(GNUInstallDirs)

find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)


add_subdirectory(welcome)
add_subdirectory(liteenv)
add_subdirectory(litebuild)
add_subdirectory(liteeditor)
add_subdirectory(litefind)
add_subdirectory(litedebug)
add_subdirectory(litetty)
add_subdirectory(quickopen)
add_subdirectory(filebrowser)
add_subdirectory(golangast)
add_subdirectory(golangedit)
add_subdirectory(golangfmt)
add_subdirectory(golangcode)
add_subdirectory(golangdoc)
add_subdirectory(golangplay)
add_subdirectory(golangpackage)
add_subdirectory(golangpresent)
add_subdirectory(markdown)
add_subdirectory(jsonedit)
add_subdirectory(rustedit)
add_subdirectory(dlvdebugger)
add_subdirectory(fakevimedit)
add_subdirectory(bookmarks)
add_subdirectory(imageeditor)
add_subdirectory(terminal)
if(DEFINES___contains___LITEIDE_QTWEBKIT)
    add_subdirectory(webkithtmlwidget)
endif()
